Enhance user activity management: refactor ActivityHandler to centralize online/offline status updates and integrate heartbeat monitoring; update ConnectionHandler to utilize new methods for improved clarity and maintainability