@@ -1,15 +1,9 @@
 package com.chattrix.api.websocket.handlers;
 
 import com.chattrix.api.entities.User;
-import com.chattrix.api.exceptions.BusinessException;
 import com.chattrix.api.repositories.UserRepository;
 import com.chattrix.api.services.auth.TokenService;
-import com.chattrix.api.services.cache.OnlineStatusCache;
-import com.chattrix.api.services.call.CallService;
 import com.chattrix.api.services.notification.ChatSessionService;
-import com.chattrix.api.services.user.HeartbeatMonitorService;
-import com.chattrix.api.services.user.UserStatusBatchService;
-import com.chattrix.api.services.user.UserStatusBroadcastService;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.websocket.CloseReason;
@@ -31,15 +25,7 @@ public class ConnectionHandler {
     @Inject
     private ChatSessionService chatSessionService;
     @Inject
-    private OnlineStatusCache onlineStatusCache;
-    @Inject
-    private UserStatusBatchService batchService;
-    @Inject
-    private UserStatusBroadcastService broadcastService;
-    @Inject
-    private CallService callService;
-    @Inject
-    private HeartbeatMonitorService heartbeatMonitorService;
+    private ActivityHandler activityHandler;
 
     public void handleOpen(Session session) throws IOException {
         String token = getTokenFromQuery(session);
@@ -66,10 +52,7 @@ public class ConnectionHandler {
 
         session.getUserProperties().put("userId", user.getId());
         chatSessionService.addSession(user.getId(), session);
-        onlineStatusCache.markOnline(user.getId());
-        batchService.queueLastSeenUpdate(user.getId());
-        heartbeatMonitorService.recordHeartbeat(user.getId());
-        broadcastService.broadcastUserStatusChange(user.getId(), true);
+        activityHandler.markUserOnline(user.getId());
 
         log.info("User Connected: {} (ID: {})", user.getUsername(), userId);
     }
@@ -82,17 +65,7 @@ public class ConnectionHandler {
             boolean hasOtherSessions = !chatSessionService.getUserSessions(userId).isEmpty();
 
             if (!hasOtherSessions) {
-                try {
-                    callService.handleUserDisconnected(userId);
-                } catch (Exception e) {
-                    log.error("Error cleaning up calls for user {}: {}", userId, e.getMessage());
-                }
-
-                onlineStatusCache.markOffline(userId);
-                batchService.queueLastSeenUpdate(userId);
-                heartbeatMonitorService.removeHeartbeat(userId);
-                broadcastService.broadcastUserStatusChange(userId, false);
-
+                activityHandler.markUserOffline(userId);
                 log.info("User Disconnected (Offline): ID {}", userId);
             }
         }
@@ -101,7 +74,7 @@ public class ConnectionHandler {
     private String getTokenFromQuery(Session session) {
         Map<String, List<String>> params = session.getRequestParameterMap();
         if (params.containsKey("token")) {
-            return params.get("token").get(0);
+            return params.get("token").getFirst();
         }
         return null;
     }
